--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,30 +1,22 @@
-/* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+body {
+  width: 1150px;
+  margin: 20px auto;
 }
 
-.menu:before {
-  content: "[";
+.clear {
+  clear: both;
 }
 
-.menu:after {
-  content: "]";
+.wall {
+  float: left;
+  width: 830px;
+}
+.pager {
+  float: left;
 }
 
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.breadcrumb {
+  float: left;
+  margin: 18px 0 0 5px;
+  display: inline-block;
 }
