Added disabled and hide button

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,4 +1,12 @@
 /*  === ANGULAR-START === */
+/*.isDisabled {
+  display: block;
+}
+
+.displ_none {
+  display: none;
+}*/
+
 [ng\:cloak], [ng-cloak], .ng-cloak {
   display: none !important;
 }
