--- a/app/css/app.css
+++ b/app/css/app.css
@@ -70,12 +70,25 @@ body {
   margin-left: 20px;
   margin-bottom: 10px;
   cursor: pointer;
+
+  /* from twitter bootstrap: style for folder like for button */
+  background-color: #f5f5f5;
+  background-image: -moz-linear-gradient(top,#ffffff,#e6e6e6);
+  background-image: -webkit-gradient(linear,0 0,0 100%,from(#ffffff),to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top,#ffffff,#e6e6e6);
+  background-image: -o-linear-gradient(top,#ffffff,#e6e6e6);
+  background-image: linear-gradient(to bottom,#ffffff,#e6e6e6);
+  background-repeat: repeat-x;
+  border: 1px solid #cccccc;
+  border-bottom-color: #b3b3b3;
 }
+
 .btn_folder input {
   width: 115px;
   margin-top: 47px;
   margin-bottom: 5px;
 }
+
 .btn_folder .btn-success {
   margin-left: 55px;
 }
@@ -95,9 +108,6 @@ body {
 .btn-warning {
   margin-left: 46px;
 }
-/*.btn-mini {*/
-  /*float: left;*/
-/*}*/
 
 .img_in_folder {
   height: 154px;
@@ -114,12 +124,6 @@ body {
 }
 
 /* EDITING HTML*/
-
-
-/*
-.main .folder {
-}
-*/
 
 .right_column {
   float: left;
@@ -143,18 +147,15 @@ body {
   margin-top: 15px;
 }
 
-.description button {
+.description a {
   margin-top: 40px;
 }
 
 .text_area {
   margin-top: 10px;
-  width: 333px;
+  width: 515px;
 }
 
-/* BREAD Crumb START*/
 .last_crumb {
   color: #f5f5f5;
 }
-/* BREAD Crumb END*/
-
