--- a/app/css/app.css
+++ b/app/css/app.css
@@ -40,6 +40,7 @@ body {
 
 /* MAIN */
 .main {
+  position: relative;
   width: 664px;
   height: 522px;
   padding-top: 10px;
@@ -92,30 +93,26 @@ body {
   margin-top: 52px;
 }
 
-.name {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  font-weight: bolder;
-  text-align: center;
-  margin-right: 4px;
-  margin-top: 2px;
-}
 .btn-warning {
   margin-left: 46px;
 }
 
 .img_in_folder {
   height: 154px;
+  position: relative;
+}
+.img_in_folder:hover {
+  text-decoration: none !important;
 }
 
 .img_in_folder div {
   float: left;
-  margin-top: 4px;
-  margin-left: 17px;
 }
+
 .delete_img {
- float: right;
- margin-top: 3px;
+  position: absolute;
+  top: 2px;
+  right: 2px;
 }
 
 /* EDITING HTML*/
@@ -161,3 +158,110 @@ body {
   font-weight: bolder;
   font-size: 13px;
 }
+
+/* folder like in mac START*/
+.change_name input {
+  width: 115px;
+  padding-top: 5px;
+  height: 14px;
+}
+
+.name {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: bolder;
+}
+.name:hover {
+  text-decoration: none;
+}
+
+.folder {
+  -webkit-perspective: 240px;
+  -moz-perspective: 800px;
+  perspective: 800px;
+
+  position: relative;
+  z-index: 0;
+  width: 130px;
+  height: 98px;
+  margin-top: 33px;
+}
+
+.folder div{
+  width: 100px;
+  height: 85px;
+  background-color:#93bad8;
+
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+
+  -webkit-transition:0.5s;
+  -moz-transition:0.5s;
+  transition:0.5s;
+
+  position:absolute;
+  top:0;
+  left:0;
+  margin-left: 15px;
+}
+
+.folder .front{
+  margin-top: 9px;
+  height: 76px;
+  border-radius:5px 5px 0 0;
+
+  -moz-transform:rotateX(-30deg);
+  -webkit-transform:rotateX(-30deg);
+  transform:rotateX(-30deg);
+
+  -moz-transform-origin:50% 100%;
+  -webkit-transform-origin:50% 100%;
+  transform-origin:50% 100%;
+
+  background-image: -moz-linear-gradient(top, #93bad8 0%, #6c9dc0 85%, #628faf 100%);
+  background-image: -webkit-linear-gradient(top, #93bad8 0%, #6c9dc0 85%, #628faf 100%);
+  background-image: linear-gradient(top, #93bad8 0%, #6c9dc0 85%, #628faf 100%);
+
+  box-shadow:0 -2px 2px rgba(0,0,0,0.1), 0 1px rgba(255,255,255,0.35) inset;
+  z-index:10;
+
+  font: bold 26px sans-serif;
+  color: #5A88A9;
+  text-align: center;
+  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.1);
+  line-height: 115px;
+}
+
+.folder .back{
+  background-image: -webkit-linear-gradient(top, #93bad8 0%, #89afcc 10%, #5985a5 60%);
+  background-image: -moz-linear-gradient(top, #93bad8 0%, #89afcc 10%, #5985a5 60%);
+  background-image: linear-gradient(top, #93bad8 0%, #89afcc 10%, #5985a5 60%);
+
+  border-radius:0 5px 0 0;
+  box-shadow:0 -1px 1px rgba(0,0,0,0.15);
+}
+
+.folder .back:before{
+  content:'';
+  width:45px;
+  height:9px;
+  border-radius:4px 4px 0 0;
+  background-color:#93bad8;
+  position:absolute;
+  top:-9px;
+  left:0px;
+  box-shadow:0 -1px 1px rgba(0,0,0,0.15);
+}
+
+.folder .back:after{
+  content:'';
+  width:100%;
+  height:4px;
+  border-radius:5px;
+  position:absolute;
+  bottom:5px;
+  left:0px;
+  box-shadow:0 4px 8px #333;
+}
+/* folder like in mac END */
