--- a/app/css/app.css
+++ b/app/css/app.css
@@ -170,7 +170,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: bolder;
+  margin-top: 5px;
+  display: block;
 }
+
 .name:hover {
   text-decoration: none;
 }
