Removed several file, connect with less

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -172,6 +172,10 @@ body {
 }
 
 /* folder like in mac START*/
+.change_name {
+  height: 29px;
+}
+
 .change_name input {
   width: 115px;
   padding-top: 5px;
@@ -281,3 +285,46 @@ body {
   box-shadow:0 4px 8px #333;
 }
 /* folder like in mac END */
+
+
+
+
+// ------------------- CARUSEL.css
+.carousel {
+  margin-bottom: 0;
+  padding: 0 40px;
+}
+
+.carousel-control {
+  left: -12px;
+}
+.carousel-control.right {
+  right: -12px;
+}
+
+.carousel-indicators {
+  right: 50%;
+  top: auto;
+  bottom: 0px;
+  margin-right: -19px;
+}
+
+.carousel-indicators li {
+  background: #c0c0c0;
+}
+.carousel-indicators .active {
+background: #333333;
+}
+
+/*  MODAL  */
+#export {
+	z-index: 1050;
+	width: 800px;
+	margin-left: -400px;
+}
+.modal-header {
+	text-align: center;
+}
+.modal-body {
+  max-height: 600px;
+}
