--- a/app/css/app.less
+++ b/app/css/app.less
@@ -60,6 +60,48 @@ body {
 
 		.span2 {
 			margin-bottom: 10px;
+
+			.img_in_folder:hover {
+				text-decoration: none !important;
+			}
+
+			.img_in_folder {
+				height: 154px;
+				position: relative;
+
+				div {
+					float: left;
+				}
+
+				.delete_img {
+					position: absolute;
+					top: 2px;
+					right: 2px;
+				}
+
+				.name {
+					font-family: Arial, Helvetica, sans-serif;
+					font-size: 14px;
+					font-weight: bolder;
+					margin-top: 5px;
+					display: inline-block;
+				}
+
+				.name:hover {
+					text-decoration: none;
+				}
+
+				.change_name {
+					height: 29px;
+
+					input {
+						width: 115px;
+						padding-top: 5px;
+						height: 12px;
+						margin-top: 2px;
+					}
+				}
+			}
 		}
 	}
 }
@@ -78,25 +120,6 @@ body {
 	}
 }
 
-.img_in_folder {
-	height: 154px;
-	position: relative;
-
-	div {
-		float: left;
-	}
-}
-
-.img_in_folder:hover {
-	text-decoration: none !important;
-}
-
-
-.delete_img {
-	position: absolute;
-	top: 2px;
-	right: 2px;
-}
 
 /* EDITING HTML*/
 
@@ -136,28 +159,6 @@ body {
 
 
 /* folder like in mac START*/
-.change_name {
-	height: 29px;
-
-	input {
-		width: 115px;
-		padding-top: 5px;
-		height: 12px;
-		margin-top: 2px;
-	}
-}
-
-.name {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	font-weight: bolder;
-	margin-top: 5px;
-	display: inline-block;
-}
-
-.name:hover {
-	text-decoration: none;
-}
 
 .folder {
 	-webkit-perspective: 240px;
@@ -257,31 +258,17 @@ body {
 .carousel {
 	margin-bottom: 0;
 	padding: 0 40px;
-}
 
-.carousel-control {
-	left: -12px;
-}
-.carousel-control.right {
-	right: -12px;
-}
+	.carousel-control {
+		left: -12px;
 
-.carousel-indicators {
-	right: 50%;
-	top: auto;
-	bottom: 0px;
-	margin-right: -19px;
-
-	li {
-		background: #c0c0c0;
-	}
-
-	.active {
-		background: #333333;
+		.carousel-control.right {
+			right: -12px;
+		}
 	}
 }
 
-/*  MODAL  */
+/*  Import/Export  */
 #export {
 	z-index: 1050;
 	width: 800px;
